# hancl

./: Datas.hs  LICENSE  hancl.cabal  loadall.sh
Cluster/: Cluster.hs  Core.hs
Lib/: Distribution.hs  Matrix.hs  Shuffle.hs
Net/: .Net.hs.swp  Collectors.hs  Net.hs  Node.hs  Parse.hs  Refiners.hs  Schedulers.hs  Taggers.hs  Worker.hs
Net/Program/: .Main.hs.swp  Main.hs  config.ints  config.levs  data.levs  datas.int
Test/: ghci.session
Test/Cluster/: Datas.hs
